Bug 234330 - Crash after pressing Ctrl+Shift+/
Summary: Crash after pressing Ctrl+Shift+/
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 229384 237103 245088 250411 250482 254299 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-14 12:41 UTC by Dima Ryazanov
Modified: 2010-11-09 18:15 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (6.93 KB, text/plain)
2010-05-19 18:16 UTC, fizyk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dima Ryazanov 2010-04-14 12:41:07 UTC
Application: konsole (2.4.2)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-18-generic x86_64
Distribution: Ubuntu lucid (development branch)

-- Information about the crash:
In Konsole's shortcut configuration dialog, there's an action with the name "None" and a shortcut Ctrl+Shift+/. I was curious what it does; apparently, it crashed Konsole.
It only happened to me once, though.

 -- Backtrace:
Application: Konsole (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f016946f760 (LWP 1353))]

Thread 2 (Thread 0x7f0152eba710 (LWP 1356)):
#0  0x00007f016645af93 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f0162e214a9 in ?? () from /lib/libglib-2.0.so.0
#2  0x00007f0162e218fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x00007f0167a62566 in QEventDispatcherGlib::processEvents (this=0x1dd8ca0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:414
#4  0x00007f0167a37992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#5  0x00007f0167a37d6c in QEventLoop::exec (this=0x7f0152eb9db0, flags=) at kernel/qeventloop.cpp:201
#6  0x00007f0167941d59 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:487
#7  0x00007f0167a18178 in QInotifyFileSystemWatcherEngine::run (this=0x1e20c00) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007f0167944775 in QThreadPrivate::start (arg=0x1e20c00) at thread/qthread_unix.cpp:248
#9  0x00007f01676b49ca in start_thread (arg=<value optimized out>) at pthread_create.c:300
#10 0x00007f01664676dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f016946f760 (LWP 1353)):
[KCrash Handler]
#5  QHash<Konsole::Session*, bool>::detach (this=0x0, session=0x1c11940, master=false) at /usr/include/qt4/QtCore/qhash.h:299
#6  QHash<Konsole::Session*, bool>::operator[] (this=0x0, session=0x1c11940, master=false) at /usr/include/qt4/QtCore/qhash.h:733
#7  Konsole::SessionGroup::setMasterStatus (this=0x0, session=0x1c11940, master=false) at ../../../../apps/konsole/src/Session.cpp:1261
#8  0x00007f015c82e34a in Konsole::SessionGroup::removeSession (this=0x0, session=0x1c11940) at ../../../../apps/konsole/src/Session.cpp:1242
#9  0x00007f015c83531a in Konsole::SessionController::copyInputToNone (this=0x1fc3120) at ../../../../apps/konsole/src/SessionController.cpp:783
#10 0x00007f015c83d16d in Konsole::SessionController::qt_metacall (this=0x1fc3120, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff0629f810) at ./SessionController.moc:160
#11 0x00007f0167a4be3f in QMetaObject::activate (sender=0x20f9690, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x46) at kernel/qobject.cpp:3293
#12 0x00007f0166bcf032 in QAction::triggered (this=0x0, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#13 0x00007f0166bd10ab in QAction::activate (this=0x20f9690, event=<value optimized out>) at kernel/qaction.cpp:1255
#14 0x00007f0166bd29b7 in QAction::event (this=0x0, e=<value optimized out>) at kernel/qaction.cpp:1181
#15 0x00007f0167eaaf3d in KAction::event (this=0x0, event=0x7fff0629fe80) at ../../kdeui/actions/kaction.cpp:129
#16 0x00007f0166bd522c in QApplicationPrivate::notify_helper (this=0x1afa040, receiver=0x20f9690, e=0x7fff0629fe80) at kernel/qapplication.cpp:4300
#17 0x00007f0166bdb6fb in QApplication::notify (this=0x7fff062a1430, receiver=0x20f9690, e=0x7fff0629fe80) at kernel/qapplication.cpp:4183
#18 0x00007f0167f80526 in KApplication::notify (this=0x7fff062a1430, receiver=0x20f9690, event=0x7fff0629fe80) at ../../kdeui/kernel/kapplication.cpp:302
#19 0x00007f0167a3906c in QCoreApplication::notifyInternal (this=0x7fff062a1430, receiver=0x20f9690, event=0x7fff0629fe80) at kernel/qcoreapplication.cpp:704
#20 0x00007f0166c10e86 in QCoreApplication::sendEvent (this=<value optimized out>, e=0x7fff062a0480) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#21 QShortcutMap::dispatchEvent (this=<value optimized out>, e=0x7fff062a0480) at kernel/qshortcutmap.cpp:879
#22 0x00007f0166c12c97 in QShortcutMap::tryShortcutEvent (this=0x1afa168, o=<value optimized out>, e=0x7fff062a0480) at kernel/qshortcutmap.cpp:364
#23 0x00007f0166bdd268 in QApplication::notify (this=0x7fff062a1430, receiver=0x1fbfe10, e=0x7fff062a0480) at kernel/qapplication.cpp:3746
#24 0x00007f0167f80526 in KApplication::notify (this=0x7fff062a1430, receiver=0x1fbfe10, event=0x7fff062a0480) at ../../kdeui/kernel/kapplication.cpp:302
#25 0x00007f0167a3906c in QCoreApplication::notifyInternal (this=0x7fff062a1430, receiver=0x1fbfe10, event=0x7fff062a0480) at kernel/qcoreapplication.cpp:704
#26 0x00007f0166c8001a in QKeyMapper::sendKeyEvent (keyWidget=0x1fbfe10, grab=<value optimized out>, type=QEvent::KeyPress, code=63, modifiers=<value optimized out>, text=..., autorepeat=false, 
    count=1, nativeScanCode=61, nativeVirtualKey=63, nativeModifiers=5) at kernel/qkeymapper_x11.cpp:1861
#27 0x00007f0166c825a0 in QKeyMapperPrivate::translateKeyEvent (this=0x1b2a1d0, keyWidget=0x1fbfe10, event=<value optimized out>, grab=64) at kernel/qkeymapper_x11.cpp:1831
#28 0x00007f0166c59904 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff062a1050) at kernel/qapplication_x11.cpp:3394
#29 0x00007f0166c85732 in x11EventSourceDispatch (s=0x1afdb50, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007f0162e1d8c2 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#31 0x00007f0162e21748 in ?? () from /lib/libglib-2.0.so.0
#32 0x00007f0162e218fc in g_main_context_iteration () from /lib/libglib-2.0.so.0
#33 0x00007f0167a62513 in QEventDispatcherGlib::processEvents (this=0x1af9190, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:412
#34 0x00007f0166c8531e in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#35 0x00007f0167a37992 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#36 0x00007f0167a37d6c in QEventLoop::exec (this=0x7fff062a1380, flags=) at kernel/qeventloop.cpp:201
#37 0x00007f0167a3baab in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#38 0x00007f015caa9e16 in kdemain (argc=<value optimized out>, argv=<value optimized out>) at ../../../../apps/konsole/src/main.cpp:77
#39 0x00000000004070f3 in launch (argc=1, _name=<value optimized out>, args=<value optimized out>, cwd=<value optimized out>, envc=1, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x1ab2106 "dima-macbook;1271240378;255739;1201_TIME90375") at ../../kinit/kinit.cpp:717
#40 0x0000000000407cb0 in handle_launcher_request (sock=8, who=<value optimized out>) at ../../kinit/kinit.cpp:1209
#41 0x000000000040823a in handle_requests (waitForPid=0) at ../../kinit/kinit.cpp:1402
#42 0x0000000000408e22 in main (argc=4, argv=<value optimized out>, envp=<value optimized out>) at ../../kinit/kinit.cpp:1845

Reported using DrKonqi
Comment 1 Dima Ryazanov 2010-04-14 12:42:01 UTC
Actually, it happens every time - as long as there are multiple tabs open.
Comment 2 Hans-Rudi Denzler 2010-04-14 16:54:14 UTC
Type "hello" then Ctrl+Shift+/ --> delete "hello"
(openSUSE 11.2, Konsole Version 2.4.2 "release 240")
Comment 3 Kurt Hindenburg 2010-04-14 17:04:28 UTC
That shortcut is to disable the "Copy To".  Crash happens with 2+ tabs open and no "Copy To" is set.
Comment 4 Hans-Rudi Denzler 2010-04-14 17:24:35 UTC
Indeed when using the numeric key bad.
Comment 5 Hans-Rudi Denzler 2010-04-14 17:32:42 UTC
Indeed when using the numeric keypad - that's bad.
Comment 6 Kurt Hindenburg 2010-04-14 17:37:04 UTC
SVN commit 1114807 by hindenburg:

Prevent crash if no "Copy To" is active and user selects "Copy To None"

CCBUG: 234330


 M  +3 -0      SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1114807
Comment 7 Kurt Hindenburg 2010-04-15 04:46:22 UTC
SVN commit 1114967 by hindenburg:

Prevent crash if no "Copy To" is active and user selects "Copy To None"

BUG: 234330


 M  +3 -0      SessionController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1114967
Comment 8 fizyk 2010-05-19 18:16:42 UTC
Created attachment 43730 [details]
New crash information added by DrKonqi

After shift+ctrl+/ crash when open more then 1 tab
Comment 9 Kurt Hindenburg 2010-07-01 17:08:34 UTC
*** Bug 229384 has been marked as a duplicate of this bug. ***
Comment 10 Nicolas L. 2010-07-20 09:45:08 UTC
*** Bug 245088 has been marked as a duplicate of this bug. ***
Comment 11 Pino Toscano 2010-09-07 13:20:43 UTC
*** Bug 250411 has been marked as a duplicate of this bug. ***
Comment 12 Pino Toscano 2010-09-08 12:23:29 UTC
*** Bug 250482 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2010-11-09 17:42:23 UTC
*** Bug 254299 has been marked as a duplicate of this bug. ***
Comment 14 Christoph Feck 2010-11-09 18:15:50 UTC
*** Bug 237103 has been marked as a duplicate of this bug. ***