Prevent crash if no "Copy To" is active and user selects "Copy To None"

BUG: 234330

svn path=/branches/KDE/4.4/kdebase/apps/konsole/; revision=1114967